--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <img src="./images/bg-top.svg" alt="top" class="bg-top">
   <img src="./images/bg-bottom.svg" alt="bottom" class="bg-bottom">
-  <div class="container">
+  <main class="container">
     <h1 class="title">Our Pricing</h1>
     <div class="toggle-area">
       <span>Annually</span>
@@ -28,40 +28,48 @@
       <span>Monthly</span>
     </div>
     <div class="cards-area">
-      <div class="card">
-        <p class="plan">Basic</p>
-        <h2 class="bill"><small>$</small>199.99</h2>
-        <ul class="features">
-          <li>500 GB Storage</li>
-          <li>2 Users Allowed</li>
-          <li>Send up to 3 GB</li>
-        </ul>
-        <button class="btn btn-primary">Learn More</button>
+      <div class="card-wrapper">
+        <div class="card">
+          <p class="plan">Basic</p>
+          <h2 class="bill"><small>$</small>199.99</h2>
+          <ul class="features">
+            <li>500 GB Storage</li>
+            <li>2 Users Allowed</li>
+            <li>Send up to 3 GB</li>
+          </ul>
+          <button class="btn btn-primary">Learn More</button>
+        </div>
       </div>
 
-      <div class="card card-primary">
-        <p class="plan">Professional</p>
-        <h2 class="bill"><small>$</small>249.99</h2>
-        <ul class="features">
-          <li>1 TB Storage</li>
-          <li>5 Users Allowed</li>
-          <li>Send up to 10 GB</li>
-        </ul>
-        <button class="btn btn-secondary">Learn More</button>
+      <div class="card-wrapper card-primary">
+
+        <div class="card">
+          <p class="plan">Professional</p>
+          <h2 class="bill"><small>$</small>249.99</h2>
+          <ul class="features">
+            <li>1 TB Storage</li>
+            <li>5 Users Allowed</li>
+            <li>Send up to 10 GB</li>
+          </ul>
+          <button class="btn btn-secondary">Learn More</button>
+        </div>
       </div>
 
-      <div class="card">
-        <p class="plan">Master</p>
-        <h2 class="bill"><small>$</small>399.99</h2>
-        <ul class="features">
-          <li>2 TB Storage</li>
-          <li>10 Users Allowed</li>
-          <li>Send up to 20 GB</li>
-        </ul>
-        <button class="btn btn-primary">Learn More</button>
+      <div class="card-wrapper">
+
+        <div class="card">
+          <p class="plan">Master</p>
+          <h2 class="bill"><small>$</small>399.99</h2>
+          <ul class="features">
+            <li>2 TB Storage</li>
+            <li>10 Users Allowed</li>
+            <li>Send up to 20 GB</li>
+          </ul>
+          <button class="btn btn-primary">Learn More</button>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
 
   <script src="./app.js"></script>
 </body>
